# west_unsaved_game

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_game.py  style_guide.txt
src/ai/behavior_trees/: generic_tree.py
src/ai/bosses/: boss_base.py  drowned_sigil.py  elder_elk.py  huln_harvester.py  spirit_breaker.py
src/ai/enemies/: base_ai.py  melee_ai.py  ranged_ai.py
src/ai/npc/: behaviors.py  characters.py  roles.py
src/config/metrics/: __init__.py  constants.py  map.py  map_config.py  map_loader.py  objectives.py  rules.py
src/config/teams/: alliance.py
src/core/: bootstrap.py  config.py  main.py
src/core/engine/: combat.py  game_engine.py  game_state.py  phases.py  tick.py
src/network/: lobby.py
src/ranking_system/: elo_system.py  per_game_score.py  reputation.py
src/shared/: interfaces.py
src/state/: lobby_state.py  match_timer.py
src/ui/: HUD.py  lobby_screen.py  match_feedback.py  overlays.py
src/users/: __init__.py  abilities.py  characters.py  perks.py  player.py  status_effects.py
src/utils/: combat_utils.py  debug_overlay.py  match_logger.py
src/weapons/: __init__.py  weapon_loader.py  weapon_stats.py  weapons.py
src/weapons/data/: baby_jack_sidekick.json  belly_buster.json  betrayer.json  black_ember_compass.json  blast_boots.json  bonnie_pistols.json  bouquet_staff.json  buckshot.json  card_gun.json  chain_harpoon.json  crucible_crucifix.json  cursed_shotgun.json  dragon_revolver.json  dreamcatcher.json  dreamy_drone.json  dual_rapiers.json  echo_shard.json  fan_of_blades.json  flame_shotgun.json  (+53 more)
