[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "west-unsaved"
version = "0.1.0"
description = "Tactical FPS with alliance/betrayal mechanics"
authors = [{ name="Antony Saragas", email="antony.saragas@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
